--- a/ppdb.html
+++ b/ppdb.html
@@ -50,7 +50,7 @@
 	<section class="ppdb"> 
 		<div class="container">
 			<h3>PENDAFTARAN PESARTA DIDIK BARU</h3>
-			<img src="img/pendaftaran.png" width="1000" height="500">
+			<img src="img/pendaftaran.jpeg" width="1000" height="500">
 			<br>
 			</br>
 		</div>	
